--- a/pigGame/style.css
+++ b/pigGame/style.css
@@ -6,7 +6,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
+
 }
 
 .clearfix::after {
@@ -70,8 +70,13 @@ body {
     margin-bottom: 130px;
 }
 
-.active { background-color: #f7f7f7; }
-.active .player-name { font-weight: 300; }
+.active {
+    background-color: #f7f7f7;
+}
+
+.active .player-name {
+    font-weight: 300;
+}
 
 .active .player-name::after {
     content: "\2022";
@@ -80,11 +85,11 @@ body {
     color: #EB4D4D;
     top: -7px;
     right: 10px;
-    
+
 }
 
 .player-current-box {
-    background-color: #EB4D4D;
+    background: linear-gradient(to left bottom, #ff416c, #ff4b2b);
     color: #fff;
     width: 40%;
     margin: 0 auto;
@@ -103,7 +108,7 @@ body {
     font-size: 30px;
 }
 
-button {
+.button {
     position: absolute;
     width: 200px;
     left: 50%;
@@ -119,8 +124,13 @@ button {
     transition: background-color 0.3s, color 0.3s;
 }
 
-button:hover { font-weight: 600; }
-button:hover i { margin-right: 20px; }
+.button:hover {
+    font-weight: 600;
+}
+
+.button:hover i {
+    margin-right: 20px;
+}
 
 button:focus {
     outline: none;
@@ -137,9 +147,17 @@ i {
     transition: margin 0.3s;
 }
 
-.btn-new { top: 45px;}
-.btn-roll { top: 403px;}
-.btn-hold { top: 467px;}
+.btn-new {
+    top: 45px;
+}
+
+.btn-roll {
+    top: 403px;
+}
+
+.btn-hold {
+    top: 467px;
+}
 
 .dice {
     position: absolute;
@@ -150,5 +168,76 @@ i {
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
 }
 
-.winner { background-color: #f7f7f7; }
-.winner .player-name { font-weight: 300; color: #EB4D4D; }
+.winner {
+    background-color: #f7f7f7;
+}
+
+.winner .player-name {
+    font-weight: 300;
+    color: #EB4D4D;
+}
+
+.score-box {
+    width: 100%;
+    display: flex;
+    padding-top: 15px;
+    /* height: 40px; */
+    /* background-color: #000; */
+    justify-content: center;
+    align-items: center;
+    /* color: #fff; */
+    transition: transform .3s;
+}
+
+.score-paragraph {
+    font-size: 35px;
+    font-weight: bold;
+    background: -webkit-linear-gradient(#ff416c, #ff4b2b);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.score-box:hover {
+    transform: skew(-5deg, -1deg) scale(1.05);
+    /* font-size: ; */
+}
+
+.winning-score {
+    /* position: absolute; */
+    /* bottom: 0; */
+    background: transparent;
+    width: 100%;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    /* float: left; */
+}
+
+.btn {
+    width: 100px;
+    display: block;
+    height: 30px;
+    background: linear-gradient(to left top, #ff416c, rgb(255, 75, 43));
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    font-weight: bold;
+    font-style: italic;
+    cursor: pointer;
+    transition: all .3s;
+    /* clear: none;
+     */
+    /* float: left; */
+}
+
+.btn:hover {
+    transform: scale(1.03);
+    box-shadow: 0px 5px 15px 0px #ccc;
+}
+
+.btn-selected {
+    box-shadow: 0px 4px 15px 3px rgba(85, 85, 85, 0.6);
+
+}
